# ImpossibleBot

./: .gitignore  Cargo.toml  Dockerfile  Pipfile
.github/workflows/: docker-publish.yml
gpt/: bot.py  gpt.py
src/: database.rs  logging.rs  main.rs  models.rs
src/commands/: fakenitro.rs  mod.rs
src/counting/: commands.rs  mod.rs
